530323: build against latest Eclipse Photon integration build
Signed-off-by: Fred Bricon <fbricon@gmail.com>